--- a/src/components/AnimationTable.css
+++ b/src/components/AnimationTable.css
@@ -37,14 +37,11 @@
     padding: 1rem 2rem;
 }
 
-.prompts-row, .keyframe-row {
+.inline-data {
     height: 1.5rem;
     padding: .5rem;
     margin-bottom: .25rem;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    border-bottom: 1px solid black;
+    border: 1px solid black;
 }
 
 .prompts-help, .keyframe-help {
