--- a/src/components/AnimationTable.css
+++ b/src/components/AnimationTable.css
@@ -1,69 +1,75 @@
+body {
+  margin: 0;
+  padding: 0;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 .container {
-    background-color: beige;
-    max-width: 960px;
-    margin: 5rem auto;
-    padding: .5rem;
-    border: 1px solid black;
-    border-radius: .5rem;
-    display: flex;
+  background-color: beige;
+  max-width: 960px;
+  margin: 5rem auto;
+  padding: 0.5rem;
+  border: 1px solid black;
+  border-radius: 0.5rem;
+  display: flex;
 }
 
 .keyframe-help {
-    width: 3rem;
-    font-weight: bold;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  width: 3rem;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.keyframe-help > button {
-    background: transparent;
-    border: none;
-    cursor: pointer;
+.prompts-column,
+.keyframe-column {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 2rem;
 }
 
-.keyframe-help > button:hover{
-    background-color: #d3d3d3;
-
-}
-
-.prompts-column, .keyframe-column {
-    display: flex;
-    flex-direction: column;
-    padding: 1rem 2rem;
-}
-
-.prompts-container, .keyframe-container {
-    margin-top: 1rem;
+.prompts-container,
+.keyframe-container {
+  /* margin-top: 1rem; */
 }
 
 .prompt {
-    display: flex;
+  display: flex;
+  /* background-color: red; */
 }
 
-.inline-data {
-    height: 1.5rem;
-    padding: .5rem;
-    margin-bottom: .25rem;
-    border: 1px solid black;
+.prompts-new {
+  /* background-color: red; */
+  /* justify-self: flex-end; */
+  /* align-self: flex-end; */
 }
 
-.prompts-help, .keyframe-help {
-    height: 1.5rem;
-    display: flex;
-    justify-content: space-between;
+.btn-delete {
+  cursor: pointer;
 }
 
-input {
-    background-color: transparent;
-    border: none;
-    padding: 8px;
+.keyframe-column .btn-delete {
+    height: 100%;
 }
 
-input:hover {
-    background-color: #d3d3d3;
+.inline-data,
+.prompts-help,
+.keyframe-help {
+  display: flex;
+  height: 40px;
+  justify-content: flex-end;
+}
+
+.inline-data input {
     cursor: pointer;
 }
+
+/* input:hover {
+  background-color: #d3d3d3;
+  cursor: pointer;
+} */
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
@@ -73,6 +79,6 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type="number"] {
   -moz-appearance: textfield;
 }
